# Pharos

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  PHAROS_ENGINEERING_ROADMAP.md  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.changeset/: fix-published-exports.md  kms-failmode-reversibility.md  rename-getpharos-scope.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
deploy/: .env.prod.example  INSTALL.md  docker-compose.prod.yml
docs/: LIMITATIONS.md  ONBOARDING.md  PUBLISHING.md  ROADMAP.md  architecture.md  assurance-and-risk.md  code-audit-durable-stores.md  decision-cascade.md  evidence-seal.md  external-verification.md  identity-and-tenancy.md  operations.md  regulation-packs-and-policy.md  review-operations.md  schema-v1.md  sdks-and-integration.md  standards-and-channel.md
examples/: README.md  langgraph-agent.ts
scripts/: bench-latency.ts  demo-durability.ts  external-verify.ts  train-judges.ts
sdks/python/: README.md  pyproject.toml
sdks/python/pharos_sdk/: __init__.py  adapters.py  client.py  govern.py
sdks/python/tests/: test_conformance.py  test_failmode.py
test/: assurance.test.ts  billing.test.ts  cascade.test.ts  core.canonical.test.ts  core.kms-resilience.test.ts  core.migration.test.ts  core.offline-bundle-fixtures.test.ts  core.seal-v2.test.ts  core.seal-verify.test.ts  core.signing-conformance.test.ts  core.signing.test.ts  policy.test.ts  (+25 more)
(+59 files in other folders)
